--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                     enabling the automatic change of power
                                     from the main supply and the generator we installed.
                                 </p>
-                                <a href="#">see more <span class="arrow_right"></span></a>
+                                <a href="https://drive.google.com/drive/folders/1knE3Z4iKvDV5Z8K78nSR6V3c8oCqcvNG?usp=sharing">see more <span class="arrow_right"></span></a>
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -320,7 +320,7 @@
                                     that could
                                     avoid obstacles and could start or stop using voice commands.
                                 </p>
-                                <a href="#">see more <span class="arrow_right"></span></a>
+                                <a href="https://drive.google.com/file/d/1Ti9yjPHObHeI-HjuBb4fkm8ZDanv0Log/view?usp=sharing">see more <span class="arrow_right"></span></a>
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -334,7 +334,7 @@
                                     ,temperature controlled
                                     lights and an automatic irrigation system.
                                 </p>
-                                <a href="#">see more <span class="arrow_right"></span></a>
+                                <a href="https://www.youtube.com/embed/FBFCAqgTnGw">see more <span class="arrow_right"></span></a>
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -365,7 +365,7 @@
                                     enabling the automatic change of power
                                     from the main supply and the generator we installed.
                                 </p>
-                                <a href="#">see more <span class="arrow_right"></span></a>
+                                <a href="https://drive.google.com/drive/folders/1knE3Z4iKvDV5Z8K78nSR6V3c8oCqcvNG?usp=sharing">see more <span class="arrow_right"></span></a>
                             </div>
                         </div>
 
@@ -380,7 +380,7 @@
                                     that could
                                     avoid obstacles and could start or stop using voice commands.
                                 </p>
-                                <a href="#">see more <span class="arrow_right"></span></a>
+                                <a href="https://drive.google.com/file/d/1Ti9yjPHObHeI-HjuBb4fkm8ZDanv0Log/view?usp=sharing">see more <span class="arrow_right"></span></a>
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -394,7 +394,7 @@
                                     ,temperature controlled
                                     lights and an automatic irrigation system.
                                 </p>
-                                <a href="#">see more <span class="arrow_right"></span></a>
+                                <a href="https://www.youtube.com/embed/FBFCAqgTnGw">see more <span class="arrow_right"></span></a>
                             </div>
                         </div>
 
