--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="col-lg-2">
                     <div class="header__logo">
                         <a href="index.html">
-                            <p>My porfolio: 2020</p>
+                            <p>My porfolio: 2021</p>
                         </a>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="hero__item set-bg" data-setbg="img/hero/regi3.png">
+            <div class="hero__item set-bg" data-setbg="img/hero/regi3.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div> 
         </div>
     </section>
 
@@ -424,7 +424,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <div class="footer__top__logo">
-                                <p>My porfolio: 2020</p>
+                                <p>My porfolio: 2021</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
