--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="porfolio Template">
-    <meta name="keywords" content="porfolio, unica, creative, html">
+    <meta name="description" content="porfolio">
+    <meta name="keywords" content="porfolio, engineering,robotics,electrical ,electronics, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Reginald Nyarko</title>
