--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                         <div class="row">
 
                         </div>
-                        <p>I am an Electrical and Electronic Engineering student.
-                            My interests are in robotics, embedded systems and control engineering. It was my dream
+                        <p>I am an Electrical and Electronic Engineering graduate.
+                            My interests are in robotics, embedded systems and artificial intelligence. It was my dream
                             growing up to be able to build the machines of fiction I saw in the movies I watched, I
                             loved the thought of being able to build whatever system or machine as long as I knew
                             enough.
                             This led me to learn as much as I could. </p>
                         <p>Along with studying as an electrical and electronic engineer, I built my skills as a
-                            developer (C++,HTML,CSS ,MATLAB ,Python, Arduino ,PLC ladder programing). I also studied
+                            developer (C++, HTML, CSS ,MATLAB ,Python, Arduino ,PLC ladder programing). I also studied
                             several design software such as AutoCAD and kicad, and whatever I needed to know to build
                             the projects I wanted ,from obstacle avoiding robots to home automation systems.
                             My wish and hope is to be at the frontline as technology evolves around the world and in
